refactor model classes to use Lombok annotations and remove manual getter/setter methods